--- a/paper/paper.Rnw
+++ b/paper/paper.Rnw
@@ -101,10 +101,37 @@ library(moments)
 # Convert these to read_csv at some point
 correl <- read.csv("correlations.csv", stringsAsFactors = FALSE)
 full <- read.csv("full.csv", row.names=1, stringsAsFactors = FALSE) 
-Turk <- read.csv("turk.csv", stringsAsFactors = FALSE) 
+prediction <- read.csv("sas/predfit.csv") #Large file, very slow
+time.fit <- read.csv("sas/time.csv")
+powercoef <- read.csv("sas/PowerEstimates.csv")
+
+colnames(prediction) <- c("rabs", "t", "alpha", "rsgn", "smoothed", "design", "subj_id", "weights", "detected", "log_time", "RandomEf", "FixedEf", "residual")
+
+full$subj_id <- factor(full$ip_address, labels=1:207)
+y <- data.frame(table(full$subj_id))
+keep <- y$Var1[y$Freq>9]
+
+full <- mutate(full, design = ifelse(test_param ==1, "Overlaid Lines", "Scatterplot"),
+               r = round(correlation, 1),
+               rsgn = ifelse(r >= 0, 1, 0),
+               rabs=abs(r),
+               alpha = log(0.05/0.95),
+               attempts = sapply(strsplit(as.character(full$response_0), ","), length), #count number of selections in response_0 column
+               weights = 1/attempts)
+full <- full %>% transform(response_0= strsplit(as.character(response_0), ",")) %>% unnest(response_0)
+#split multiple selections in response_0 into different rows
+full <- mutate(full, correct = ifelse(response_0 == actual_location, 1, 0),
+                   score = ifelse(correct==1, (20-attempts)/19, 0))
+full <- select(full, subj_id, correct, score, r, rsgn, rabs, smoothed, n, design, log_time, response_0, actual_location, pic_id, choice_reason, attempts, weights, alpha)
+
+full.sub <- filter(full, subj_id %in% keep) #keeping only >9 selections in actual modelling to better estimate random effects
+
+bylineup <- summarise(group_by(full.sub, pic_id, n, smoothed, design, r, actual_location), total=sum(score), correct=sum(correct), evals=sum(attempts*weights))
+bylineup <- mutate(bylineup, percent = total/evals)
+bylineup.sub <- summarise(group_by(full.sub, pic_id), total=sum(score), evals=sum(weights*attempts))
 
 gen_true_data <- function(n, r, dep=TRUE, smoothed = FALSE) {
-  d <- data.frame(rmnorm(n, c(0, 0), matrix(c(1, r, r, 1), 2, 2))) ##True plot, 0.5 for sigma off-diagonals requires ~300 iterations for all lineups.
+  d <- data.frame(rmnorm(n, c(0, 0), matrix(c(1, r, r, 1), 2, 2))) 
   if (dep) {
     d$X1 <- as.vector(arima.sim(list(ar=n/100), n, innov=d$X1))
     d$X2 <- as.vector(arima.sim(list(ar=n/100), n, innov=d$X2))
@@ -396,7 +423,7 @@ p4b <- ggplot(data=b, aes(x=X1, y=X2)) + geom_point() + labs(title="Scatterplot"
 grid.arrange(p1b, p2b, p3b, p4b, ncol=2)
 @
   \caption{The same two data sets in both plot designs. t=24, correlation (left) = 0.946, correlation (right) = -0.943}
-    \label{designs}
+  \label{designs}
 \end{figure}
 
 The web site that the Turk workers accessed to complete the task can be seen at http://104.236.245.153:8080/mahbub/turk18/index.html.  You can also try out the tasks, but your results will not be recorded. (The experiment cost \$210 to run.)
@@ -408,39 +435,26 @@ The web site that the Turk workers accessed to complete the task can be seen at 
 \begin{figure}[htbp]
  \centering
 <<results, dependson='setup', fig.width=6, fig.height=8, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, error=FALSE, message=FALSE>>=
-Turk <- mutate(Turk, plot = ifelse(test_param =="line", "Overlaid Lines", "Scatterplot"), 
-               sign=ifelse(correlation > 0, 1, 0), smoothed=ifelse(smoothed=="yes", 1, 0))
-#ggplot(data=subset(Turk, smoothed==0), aes(x=correlation, y=percent, colour=plot)) + geom_smooth() + geom_point() + facet_grid(n~.) + scale_colour_discrete(name = "Plot Design") +  labs(title="Unsmoothed Plot Accuracy", y="Percent Correct", x="True Plot Correlation")
-ggplot(data=Turk, aes(x=correlation, y=percent, colour=plot)) + geom_smooth(se=F) + geom_point() + facet_grid(n~smoothed) + 
+ggplot(data=bylineup, aes(x=r, y=percent, colour=design)) + geom_smooth(se=F) + geom_point() + facet_grid(n~smoothed) + 
   scale_colour_discrete(name = "Plot Design") + labs(y="True plot detection rate", x="Correlation") +
   theme(legend.position="bottom")
 @
-  \caption{Response accuracy for unsmoothed data, broken by unsmoothed (left), smoothed (right) and sample size. The dots are data points, the lines represent a naive model average fit. Both plot designs have similar performance for positively correlated data, however the overlaid line graphs are particularly weak at revealing negative correlation.}
+  \caption{Response accuracy for unsmoothed data, broken by unsmoothed (left), smoothed (right) and sample size. The dots are data points, the lines represent a naive model average fit. Both plot designs have similar performance for positively correlated data, however the overlaid line graphs are much weaker at revealing negative correlation.}
     \label{results}
 \end{figure}
 
 Figure~\ref{results} shows the raw results of the survey and Figure~\ref{powerdiff} shows the difference in power with a $95\%$ confidence interval calculated according to  formula~\ref{propci}. Values above zero indicate that the scatter plot had more power to detect the true plot than the overlaid lines.
 Performance between the two plot designs appears to be similar for positive correlation, with the scatter plot power gradually improving relative to the overlaid lines as sample size increases. The scatter plot appears to be the superior choice as it retains its power with negative correlation, where the overlaid lines performance suffered. This is not surprising, as positive and negative correlation appear as symmetric graphs in the scatter plot but the two characteristics appear very differently in the overlaid line graph (Figure~\ref{designs}). The right side shows the performance benefits of smoothing overlaid line time series data. Much of the 'noise' in the time series is removed and studying the overall trend shows a greatly improved ability to successfully detect the true data plot when it is negatively correlated. The scatter plot still appears to be the superior plot, but much of the gap between the two is reduced for positive correlation. 
 
+\iffalse
 \begin{figure}[htbp]
   \centering
-<<powerdiff, dependson='results', fig.width=6, fig.height=8, out.width='0.7\\textwidth', echo=FALSE, error=FALSE, message=FALSE, warning=FALSE>>=
-Turk$correct <- Turk$percent*Turk$attempt
-Turk$r <- round(Turk$correlation, 1)
-#Turk.line <- subset(Turk, test_param=="line")
-#Turk.scatter <- subset(Turk, test_param=="scatter")
-prop <- Turk[order(Turk$r, Turk$n, Turk$smoothed),c("smoothed", "n", "attempt", "correct", "r", "plot")]
-prop <- summarise(group_by(prop, smoothed, n, r), l.attempt=sum(ifelse(plot=="Overlaid Lines", attempt, 0)),
-                                                  l.correct=sum(ifelse(plot=="Overlaid Lines", correct, 0)),
-                                                  s.attempt=sum(ifelse(plot=="Scatterplot", attempt, 0)),
-                                                  s.correct=sum(ifelse(plot=="Scatterplot", correct, 0)))
-#Turk.line <- Turk.line[order(Turk.line$r, Turk.line$n, Turk.line$smoothed),c("smoothed", "n", "attempt", "correct", "r")]
-#Turk.line <- summarise(group_by(Turk.line, smoothed, n, r, test_param), sum(attempt), sum(correct))
-#Turk.scatter <- Turk.scatter[order(Turk.scatter$r, Turk.scatter$n, Turk.scatter$smoothed),c("smoothed", "n", "attempt", "correct", "r")]
-#Turk.scatter <- summarise(group_by(Turk.scatter, smoothed, n, r), sum(attempt), sum(correct))
-#colnames(Turk.scatter) <- c("smoothed", "n", "r", "s.attempt", "s.correct")
-#colnames(Turk.line) <- c("smoothed", "n", "r", "l.attempt", "l.correct")
-#prop <- cbind(Turk.line, Turk.scatter[4:5])
+<<powerdiff, dependson='setup', fig.width=6, fig.height=8, out.width='0.7\\textwidth', echo=FALSE, error=FALSE, message=FALSE, warning=FALSE>>=
+prop <- Turk[order(Turk$r, Turk$n, Turk$smoothed),c("smoothed", "n", "attempt", "correct", "r", "design")]
+prop <- summarise(group_by(prop, smoothed, n, r), l.attempt=sum(ifelse(design=="Overlaid Lines", attempt, 0)),
+                                                  l.correct=sum(ifelse(design=="Overlaid Lines", correct, 0)),
+                                                  s.attempt=sum(ifelse(design=="Scatterplot", attempt, 0)),
+                                                  s.correct=sum(ifelse(design=="Scatterplot", correct, 0)))
 prop <- mutate(prop, l.adj = (l.correct+1)/(l.attempt+1), s.adj = (s.correct+1)/(s.attempt+1),
                df = s.attempt + l.attempt - 1, difference=s.adj-l.adj, t = qt(0.975, df),
                upper = difference + t*sqrt(s.adj*(1-s.adj)/s.attempt+l.adj*(1-l.adj)/l.attempt),
@@ -451,13 +465,14 @@ ggplot(data=prop) + geom_errorbar(aes(x=r, ymax=upper, ymin=lower)) + geom_point
  \caption{The difference in estimated power (scatter plot power minus overlaid line power) to reveal the true plot by smoothness and sample size with a 95\% confidence interval. The red line indicates the point where both plot designs are equally powerful while values above this line indicate that the scatter plot is more powerful than the overlaid line graph. The largest differences appear in negative correlation, where the scatter plot is more powerful.}
  \label{powerdiff}
 \end{figure}
+\fi
 
 \begin{figure}[htbp]
   \centering
-<<samplesize, dependson='powerdiff', fig.width=6, fig.height=8, out.width='0.7\\textwidth', echo=FALSE, error=FALSE, message=FALSE, warning=FALSE>>=
-ggplot(data=subset(Turk, smoothed==0), aes(x=correlation, y=percent, colour=factor(n))) + geom_smooth(se=F) + geom_point() + facet_grid(plot~.) + scale_colour_discrete(name = "Sample size") +  labs(y="Percent Correct", x="Correlation") + theme(legend.position="bottom")
+<<samplesize, dependson='setup', fig.width=6, fig.height=8, out.width='0.7\\textwidth', echo=FALSE, error=FALSE, message=FALSE, warning=FALSE>>=
+ggplot(data=subset(bylineup, smoothed==0), aes(x=r, y=percent, colour=factor(n))) + geom_smooth(se=F) + geom_point() + facet_grid(design~.) + scale_colour_discrete(name = "Sample size") +  labs(y="Percent Correct", x="Correlation") + theme(legend.position="bottom")
 @
- \caption{Replotting figure~\ref{results} to highlight the effects of changes in sample size of unsmoothed data. The scatter plot appears to universaly benefit from increased sample sizes but the overlaid lines only see a benefit in positive correlation.}
+ \caption{Replotting figure~\ref{results} to highlight the effects of changes in sample size of unsmoothed data. The scatter plot appears to universally benefit from increased sample sizes but the overlaid lines only see a benefit in positive correlation.}
  \label{samplesize}
 \end{figure}
 
@@ -467,21 +482,19 @@ Figure~\ref{time} and Figure~\ref{confidence} give a breakdown of the interactio
 \begin{figure}[htbp]
   \centering
 <<time, dependson='setup', fig.width=6, fig.height=6, out.width='0.7\\textwidth', echo=FALSE, error=FALSE, message=FALSE, warning=FALSE>>=
-full <- mutate(full, sign = ifelse(correlation >= 0, 1, 0), n24 = ifelse(n ==24, 1, 0), n48 = ifelse(n ==48,  1, 0), n96 = ifelse(n ==96, 1, 0), plot = ifelse(test_param ==1, "Overlaid Lines", "Scatterplot"))
-time <- data.frame(plot=full$plot, time=full$log_time, correct=full$correct, rsgn=full$sign)
-#ggplot(data=time, aes(x=time, fill=factor(correct))) +geom_bar(stat="bin") + facet_grid(~plot) +labs(x="Log(Time) Taken", y=element_blank()) + scale_fill_discrete(name = "Correct")
+time <- select(full, design, log_time, correct,, sign)
 time$rsgn <- factor(time$rsgn, labels=c("r -","r +"))
-tm <- summarise(group_by(time, correct, plot, rsgn), m=mean(time))
-t1 <- ggplot(data=subset(time, correct==0), aes(x=time)) + geom_histogram(binwidth=0.5) + 
+tm <- summarise(group_by(time, correct, design, rsgn), m=mean(log_time))
+t1 <- ggplot(data=subset(time, correct==0), aes(x=log_time)) + geom_histogram(binwidth=0.5) + 
   geom_vline(data=subset(tm, correct==0), aes(xintercept = m), color="red") +
-  facet_grid(plot~rsgn) + labs(title="Did not detect", x="Log(Time) Taken", y=element_blank())  
-t2 <- ggplot(data=subset(time, correct==1), aes(x=time)) + geom_histogram(binwidth=0.5) + 
+  facet_grid(design~rsgn) + labs(title="Did not detect", x="Log(Time) Taken", y=element_blank())  
+t2 <- ggplot(data=subset(time, correct==1), aes(x=log_time)) + geom_histogram(binwidth=0.5) + 
   geom_vline(data=subset(tm, correct==1), aes(xintercept = m), color="red") +
-  facet_grid(plot~rsgn) + labs(title="Detected", x="Log(Time) Taken", y=element_blank())  
+  facet_grid(design~rsgn) + labs(title="Detected", x="Log(Time) Taken", y=element_blank())  
 grid.arrange(t1, t2, ncol=2)
 @
   \caption{Histograms of log time taken to make a decision. r+ and r- indicate the sign of true plot correlation. The vertical red line is the average time of the particular group. On average scatter plots are faster and the true plot is detected more often, with r-.}
-  \label{time} 
+    \label{time} 
 \end{figure}
 
 Subjects were asked to give a number from 1 to 5 to rate how confident they were in there choice (1 - most confident, 5 - least confident, average = 3.34). There were no statistically significant differences between plot designs, however subjects were slightly less confident on true plot detections (by $0.25 \pm  0.16, p=0.002$) and every one percent extra time required to make a decision increased confidence (by $0.19 \pm 0.07, p<0.001$). One possible explanation is that subjects often focused on a null plot and picked it confidently. This would suggest that the null plots often produced visually interesting features subjects assumed were caused by the association between plots.
@@ -496,16 +509,16 @@ The result suggests that the latter hypothesis is more likely to be correct. We 
 
 \begin{figure}[htbp]
   \centering
-<<confidence, dependson='time', fig.width=6, fig.height=6, out.width='0.7\\textwidth', echo=FALSE, error=FALSE, message=FALSE, warning=FALSE>>=
-conf <- data.frame(plot=full$plot, conf=full$conf_level, correct=full$correct, rsgn=full$sign)
+<<confidence, dependson='setup', fig.width=6, fig.height=6, out.width='0.7\\textwidth', echo=FALSE, error=FALSE, message=FALSE, warning=FALSE>>=
+conf <- select(full, design, conf_level, correct, sign)
 conf$rsgn <- factor(conf$rsgn, labels=c("r -","r +"))
-cm <- summarise(group_by(conf, correct, plot, rsgn), m=mean(conf))
-c1 <- ggplot(data=subset(conf, correct==0), aes(x=conf)) + geom_histogram(binwidth=1) + 
+cm <- summarise(group_by(conf, correct, design, rsgn), m=mean(conf_level))
+c1 <- ggplot(data=subset(conf, correct==0), aes(x=conf_level)) + geom_histogram(binwidth=1) + 
   geom_vline(data=subset(cm, correct==0), aes(xintercept = m), color="red") +
-  facet_grid(plot~rsgn) + labs(title="Did not detect", x="Confidence", y=element_blank())  
-c2 <- ggplot(data=subset(conf, correct==1), aes(x=conf)) + geom_histogram(binwidth=1) + 
+  facet_grid(design~rsgn) + labs(title="Did not detect", x="Confidence", y=element_blank())  
+c2 <- ggplot(data=subset(conf, correct==1), aes(x=conf_level)) + geom_histogram(binwidth=1) + 
   geom_vline(data=subset(cm, correct==1), aes(xintercept = m), color="red") +
-  facet_grid(plot~rsgn) + labs(title="Detected", x="Confidence", y=element_blank())  
+  facet_grid(design~rsgn) + labs(title="Detected", x="Confidence", y=element_blank())  
 grid.arrange(c1, c2, ncol=2)
 @
   \caption{Histograms of reported confidence levels. 1 - Low, 5 - High. Detection had a minor detrimental impact on confidence, whilst time taken increased it. There was no statistically significant difference on confidence level between plot designs.}
@@ -518,22 +531,15 @@ Figure~\ref{confidence2} compares the reported confidence for each selection aga
 
 \begin{figure}[htbp]
   \centering
-<<confidence2, dependson='time', fig.width=6, fig.height=6, out.width='0.7\\textwidth', echo=FALSE, error=FALSE, message=FALSE, warning=FALSE>>=
-full$subj_id <- factor(full$ip_address, labels=1:207)
-y <- data.frame(table(full$subj_id))
-keep2 <- y$Var1[y$Freq>9]
-conf2 <- filter(full, subj_id %in% keep2)
-conf2 <- select(conf2, conf_level, correlation, test_param, smoothed, n, correct, sign, plot, subj_id) #c(7, 15, 16, 17, 20, 27)]
-#sub <- summarise(group_by(sub, subj_id), correct = sum(correct), conf=mean(conf_level))
-#sub <- merge(sub, y, by.x="subj_id", by.y="Var1")
-#sub <- mutate(sub, prop = correct/Freq)
+<<confidence2, dependson='setup', fig.width=6, fig.height=6, out.width='0.7\\textwidth', echo=FALSE, error=FALSE, message=FALSE, warning=FALSE>>=
+conf2 <- select(full, conf_level, correlation, smoothed, n, design) #c(7, 15
 qplot(correlation, 6-conf_level, data=conf2, alpha=I(0.1)) + 
   geom_smooth(method="loess") + 
-  facet_grid(n~plot+smoothed) +
+  facet_grid(n~design+smoothed) +
   labs(x = "Correlation", y = "Confidence (5=High, 1=Low)")
 @
   \caption{Reported confidence against true plot correlation. Darker points indicate a confidence level selected more regularly. Strong correlation is more often associated with a lower reported confidence.}
-  \label{confidence2}
+ \label{confidence2}
 \end{figure}
 
 \subsection{Selection Analysis}
@@ -542,32 +548,20 @@ There are two major reasons why a subject may fail to detect the true plot out o
 
 \begin{figure}[htbp]
   \centering
-<<pins, dependson='samplesize', fig.width=6, fig.height=10, out.width='0.7\\textwidth', echo=FALSE, error=FALSE, message=FALSE, warning=FALSE>>=
-# correl <- read.csv("correlations.csv") # You have already read this
+<<pins, dependson='setup', fig.width=6, fig.height=10, out.width='0.7\\textwidth', echo=FALSE, error=FALSE, message=FALSE, warning=FALSE>>=
 count.setup <- select(full, pic_id, response_0, actual_location, 
-              test_param, smoothed, n)
-count.setup$response_0 <- as.character(count.setup$response_0) #full[,c(5, 6, 10, 15, 16, 17)]
-# Need to use the tidyr commands instead of cSplit
-# Here's where we will need to make some changes to incorporate the multiple picks
-#pin <- pin %>% transform(response_0= strsplit(as.character(response_0), ",")) %>% unnest(response_0)
-#pin$response_0 <- separate(pin, response_0, "response_0", sep=",", extra="drop")
-count.setup$choice <- separate(count.setup, response_0, c("choice", "l1", "l2"), ",", extra="drop")$choice
-count.setup$choice[str_detect(count.setup$actual_location, count.setup$response_0)] <- 
-  count.setup$actual_location[str_detect(count.setup$actual_location, count.setup$response_0)]
-                         #as.integer(pin$response_0)
-counts <- data.frame(table(count.setup$pic_id, count.setup$choice))
+              design, smoothed, n)
+count.setup$response_0 <- as.character(count.setup$response_0)
+counts <- data.frame(table(count.setup$pic_id, count.setup$response_0))
 counts$Var1 <- as.numeric(as.character(counts$Var1))
 counts$Var2 <- as.numeric(as.character(counts$Var2))
-colnames(counts) <- c("lineup", "plots", "count")
-pin <- merge(counts, Turk[-17], by.x="lineup", by.y="pic_id")
-pin <- select(pin, lineup, plots, count, smoothed, true_pos, n, test_param, r, attempt)#pin[,c(1, 2, 3, 12, 13, 15, 11, 20)]
+colnames(counts) <- c("lineup", "plot", "count")
+pin <- merge(counts, bylineup, by.x="lineup", by.y="pic_id")
+pin <- select(pin, lineup, plot, count, smoothed, actual_location, n, design, r, evals)
 pin$r <- factor(pin$r)
-colnames(pin) <- c("lineup", "plot", "count", "smoothed", "true_pos", "n", "design", "r", "attempt")
-pin <- mutate(pin, design=ifelse(design=="scatter", "Scatterplot", "Overlaid Lines"))#, smoothed=ifelse(smoothed=="no", 0, 1))
 pin$base <- 0
 pin$Correlation <- diag(as.matrix(correl[pin$lineup, (pin$plot+2)]))
-pin <- mutate(pin, true = ifelse(plot==true_pos, "True plot", "Null plot"), percent = count/attempt)
-#pin <- merge(pin, Turk[,c(2, 16)], by.x = "lineup", by.y = "pic_id")
+pin <- mutate(pin, true = ifelse(plot==actual_location, "True plot", "Null plot"), percent = count/evals)
 pin.a <- ggplot(data=filter(pin, smoothed==0 & design == "Scatterplot")) + geom_errorbar(aes(x=Correlation, ymin=base, ymax=percent, colour=true)) +
        geom_point(aes(x=Correlation, y=percent, colour=true)) + coord_fixed() + facet_grid(n~r) + labs(title="Unsmoothed Scatterplot", y="Percent Chosen") + theme(legend.position="none")
 pin.b <- ggplot(data=subset(pin, smoothed==1 & design == "Scatterplot")) + geom_errorbar(aes(x=Correlation, ymin=base, ymax=percent, colour=true)) +
@@ -578,7 +572,6 @@ pin.d <- ggplot(data=subset(pin, smoothed==1 & design == "Overlaid Lines")) + ge
   geom_point(aes(x=Correlation, y=percent, colour=true)) + coord_fixed()  + facet_grid(n~r) + labs(title="Smoothed Overlaid Lines", y="Percent Chosen") + theme(legend.position="none")
 grid.arrange(pin.a, pin.b, pin.c, pin.d, ncol=1)
 @
-
   \caption{Pin plots of the subject selections of each lineup, by design, smoothness, true plot correlaition and sample size. On the x-axis is the correlation of the plot (there is potentially spurious correlation in the null plots), and on the y-axis is the proportion a plot was chosen. Each plot contains data from the three lineups with the requisite characteristics. Red pins indicate null plots and blue indicates the true plot, occasionally the true plot does not seem to appear as it has a proportion of zero and is visually blocked by the red pins. Strongly correlated plot seem to be selected regardless of if the relationship is real or spurious.}
   \label{pins}
 \end{figure}
@@ -589,7 +582,7 @@ Occasionally there was an anomaly where a single null plot was selected with a h
   \centering
   \includegraphics[width=0.5\textwidth]{anom1}
   \caption{A lineup of unsmoothed scatter plots with a sample size of 24. The true plot is located in position 4 with a correlation of -0.491, and was selected by one out of eleven observers (p = 0.33). The plot in position 6 was selected by nine of these eleven observers (p < 0.001) despite having a correlation of -0.037. Subjects most often cited the clustering effect shown as the reason for their selection, an example of the over-interpretation of randomness.}
-  \label{anom1}
+    \label{anom1}
 \end{figure}
 
 \begin{figure}[htbp]
@@ -628,40 +621,19 @@ It is assumed that $\epsilon_{ijkt} \sim \mathcal{N} (0, \Sigma_{ijkt})$ and $\g
 Where a subject made multiple selections from the same lineup, each selection is treated as a separate data point with a probability weighting equal to the inverse of the number of selections.
 
 \begin{table}[htp]
-\caption{Weighted Mixed Effects Logit Model for the predicted power of plot design. Sample size for scatter plot evaluations: 900, overlaid lines: 949, total: 1849. Default plot design is overlaid lines. The model is fitted using the GLIMMIX procedure in SAS.} %Sign = 1 if correlation > 0, 0 otherwise. Each plot design is estimated separately. Results must be transformed via the logit link function to generate a power prediction. Subjects with less than ten lineup evaluations were removed from the sample.
-
+\caption{Weighted Mixed Effects Logit Model for the predicted power of plot design. Sample size for scatter plot evaluations: 900, overlaid lines: 949, total: 1849. Default plot design is overlaid lines. The model is fitted using the GLIMMIX procedure in SAS.}
 \label{tab1}
 \centering
 <<powerfit, dependson='setup', results='asis', echo=FALSE, message=FALSE, error=FALSE, error=FALSE, message=FALSE, warning=FALSE>>=
-full$subj_id <- factor(full$ip_address, labels=1:207)
-
-# Need to keep only evaluations done by subject who completed at least 10
-x <- data.frame(table(full$subj_id))
-keep <- x$Var1[x$Freq>9]
-full.subs <- filter(full, subj_id %in% keep)
-full.subs$r <- round(full.subs$correlation, 1)
-full.subs$rsgn <- ifelse(full.subs$r >= 0, 1, 0)
-full.subs$rabs <- abs(full.subs$r)
-full.subs$plot <- ifelse(full.subs$test_param == 0, "S", "L")
-full.subs <- select(full.subs, subj_id, correct, r, rsgn, rabs, smoothed, n, plot, log_time, response_0, actual_location, pic_id, choice_reason)#[,c(1,7, 15,16,17,20:26)]
-full.subs$attempts <- sapply(strsplit(as.character(full.subs$response_0), ","), length)
-full.subs$weights = 1/(full.subs$attempts) #weights are actually number of attempts in the glm
-full.sub <- full.subs %>% transform(response_0= strsplit(as.character(response_0), ",")) %>% unnest(response_0)
-full.sub$correct <- ifelse(full.sub$response_0 == full.sub$actual_location, 1, 0) #fixing correct for multiple guesses
-full.sub$alpha <- log(.05/0.95)
-full.sub$subj_id <- as.numeric(full.sub$subj_id)
-subsetted <- select(full.sub, rabs, n, alpha, rsgn, smoothed, plot, subj_id, weights, correct, log_time)
-subsetted$rabs <- as.numeric(subsetted$rabs)
-subsetted$subj_id <- as.numeric(subsetted$subj_id)
-subsetted <- mutate(subsetted, plot = ifelse(plot=="S", 1, 0))
+sasdata <- select(full.sub, rabs, n, alpha, rsgn, smoothed, design, subj_id, weights, correct, log_time)
+sasdata$rabs <- as.numeric(sasdata$rabs)
+sasdata$subj_id <- as.numeric(sasdata$subj_id)
+sasadata <- mutate(sasdata, design = ifelse(design=="Scatterplot", 1, 0))
 #write.csv(subsetted, "sas/choices.csv", row.names = FALSE)
-
-powercoef <- read.csv("sas/PowerEstimates.csv")
 powercoef <- powercoef[,-1]
 rownames(powercoef) <- c("Intercept", "abs(r)", "sign(r)", "abs(r)*sign(r)", "smoothed", "t", "plot", "plot*abs(r)", "plot*sign(r)", "plot*abs(r)*sign(r)", "plot*smoothed", "plot*t")
 colnames(powercoef) <- c("Estimate", "standard error", "df", "t-value", "p-value")
 kable(powercoef, format="latex", digits=2)
-#kable(powercoef[7:12,], format="latex", digits=2)
 @
 \end{table}
 
@@ -675,23 +647,20 @@ Figure~\ref{powermodel} shows the fitted unrestricted model, with power predicti
 
 \begin{figure}[htbp]
  \centering
-<<powermodel, dependson='powerfit', fig.height=8, fig.width=8, out.width='0.7\\textwidth', echo=FALSE, error=FALSE, message=FALSE, warning=FALSE>>=
+<<powermodel, dependson='setup', fig.height=8, fig.width=8, out.width='0.7\\textwidth', echo=FALSE, error=FALSE, message=FALSE, warning=FALSE>>=
 # data.frame(expand.grid(rabs=rabs, t=t, alpha=log(.05/0.95), rsgn=c(0,1),
-#                                      smoothed=c(0,1), plot=c(0,1),
+#                                      smoothed=c(0,1), design=c(0,1),
 #                                      subj_id=full.sub$subj_id))
 #pred <- subset(pred, smoothed==0 | smoothed == 1 & t ==48 | smoothed ==1 & t ==96)
 #write.csv(pred, "sas/predgrid.csv", row.names=FALSE) # these lines are done, but its a large file so commented out for knitr
 #Code exported to sas, see sas/model\ fit.sas
-prediction <- read.csv("sas/predfit.csv") #Large file, very slow
-colnames(prediction) <- c("rabs", "t", "alpha", "rsgn", "smoothed", "plot", "subj_id", "weights", "detected", "log_time", "RandomEf", "FixedEf", "residual")
-glmm.resid <- subset(prediction, detected==0 | detected==1)
-prediction <- mutate(prediction, r = ifelse(rsgn==1, rabs, -rabs), plot = ifelse(plot==0, "Overlaid Lines", "Scatterplot"), plot = ifelse(smoothed==1, paste(plot, "(Smoothed)", sep=" "), plot),  diff = round(RandomEf - FixedEf,5))
+prediction <- mutate(prediction, r = ifelse(rsgn==1, rabs, -rabs), design = ifelse(design==0, "Overlaid Lines", "Scatterplot"), design = ifelse(smoothed==1, paste(design, "(Smoothed)", sep=" "), design),  diff = round(RandomEf - FixedEf,5))
 randomeffects <- summarise(group_by(prediction, subj_id), re=max(diff)) #all values of diff are identical for a given subject, max chosen just as a function to select one of them
-prediction <- select(prediction, r, t, rsgn, smoothed, plot, subj_id, RandomEf, FixedEf)
+prediction <- select(prediction, r, t, rsgn, smoothed, design, subj_id, RandomEf, FixedEf)
 prediction <- mutate(prediction, RandomEf = exp(RandomEf)/(1+exp(RandomEf)), FixedEf = exp(FixedEf)/(1+exp(FixedEf)))
  
-qplot(r, RandomEf, data=prediction, color=plot, 
-      group=interaction(subj_id, plot), geom="line", alpha=I(0.1)) + 
+qplot(r, RandomEf, data=prediction, color=design, 
+      group=interaction(subj_id, design), geom="line", alpha=I(0.1)) + 
   scale_color_manual("Plot Design", values=c("#33AA33", "#9977EE", "#FF9933", "#00DDAA")) + 
   xlab("Correlation") + ylab("Estimated Power") +
   geom_line(aes(y=FixedEf), size=2, alpha=1) + theme_bw() + facet_wrap(~t, ncol = 2) + theme(aspect.ratio=1.2)
@@ -702,22 +671,23 @@ qplot(r, RandomEf, data=prediction, color=plot,
 
 \begin{figure}
   \centering
-<<residuals, dependson='powermodel', fig.height=4, fig.width=6, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
+<<residuals, dependson='setup', fig.height=4, fig.width=6, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
+glmm.resid <- subset(prediction, detected==0 | detected==1)
 ggplot(data=glmm.resid) + geom_histogram(aes(y=..density.., x=residual), binwidth=2) + labs(x=NULL, y=NULL)
 @
   \caption{Histograms of residuals, $\hat{\epsilon}$ for both the scatter plot (left) and the overlaid lines (right). Both appear to be normal, though there are some extreme outliers.}
-  \label{residuals}
+    \label{residuals}
 \end{figure}
 
 Analysing the level one residuals, $\hat{\epsilon_{i}}$ and level two residuals, $\hat{\gamma_{i}}$ allows us to test the model fit as described \citet{Loy}. There are some negative extreme outliers but the distributional assumption appears to hold.
 
 \begin{figure}[htbp]
   \centering
-<<random, dependson='powerfit', fig.height=4, fig.width=6, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
+<<random, dependson='powermodel', fig.height=4, fig.width=6, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
 ggplot(data=randomeffects) + geom_histogram(aes(x=re, y=..density..), binwidth=0.08) + xlab("Random Effects") + ylab(NULL)
 @
     \caption{Histograms of estimated subject random effects, $\hat{\gamma}$. They appear to be normally distributed with mean zero.}
-\label{random}
+  \label{random}
 \end{figure}
 
 In Figure~\ref{random}, the level two residuals, $\hat{\gamma}$, generated appear to be normally distributed validating the assumptions of the modelling process.
@@ -725,11 +695,9 @@ For each lineup, we rate the difficulty by the proportion of true plot detection
 
 \begin{figure}[htbp]
 \centering
-<<random2, dependson='random', fig.height=6, fig.width=6, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
-turk.correct <- summarise(group_by(full.sub, pic_id), correct=sum(correct), attempts=sum(weights*attempts))
-turk.correct$percent <- turk.correct$correct/turk.correct$attempts
-ability <- merge(full.sub[,c("subj_id", "pic_id", "correct")], turk.correct[c("pic_id", "percent")], by="pic_id")
-ability <- summarise(group_by(ability, subj_id), actual=sum(correct), estimated=sum(percent))
+<<random2, dependson='setup', fig.height=6, fig.width=6, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
+ability <- merge(full.sub[,c("subj_id", "pic_id", "correct", "score")], bylineup[c("pic_id", "percent")], by="pic_id")
+ability <- summarise(group_by(ability, subj_id), actual=sum(score), estimated=sum(percent))
 ability$diff <- ability$actual - ability$estimated
 ability.re <- merge(ability, randomeffects, by="subj_id")
 ggplot(data=ability.re, aes(x=diff, y=re)) + geom_point() + labs(x="Visual Ability", y="Random Effects")
@@ -737,29 +705,6 @@ ggplot(data=ability.re, aes(x=diff, y=re)) + geom_point() + labs(x="Visual Abili
 \caption{Visual ability plotted against random effects. The diagonal pattern suggests a strong positive relationship, indicating that the random effects in the model are a suitable measure of visual ability.}
 \label{random2}
 \end{figure}
-
-\begin{table}[htbp]
-\caption{Linear mixed model fit for time taken to make a selection, default plot style is overlaid lines. Fitted with the MIXED procedure in SAS.}
-\centering
-\label{tab2}
-<<timefit, dependson='powerfit', echo=FALSE, results='hide', message=FALSE, error=FALSE, warning=FALSE>>=
-#timelmer <-  lmer(log_time ~ smoothed + r + n + rsgn*r + plot + plot*smoothed 
-#                  + plot*r + plot*n + plot*rsgn*r + plot*correct + (1|subj_id), data=full.sub)
-#time.fit <- summary(timelmer)$coefficients
-#pv <- function(x){
-#  p <- 2*(1-pt(x, 1835))
-#}
-#p.value <- sapply(time.fit[,3], pv)
-#time.fit <- cbind(time.fit, p.value)
-time.fit <- read.csv("sas/time.csv")
-time.fit <- time.fit[c(1, 5, 6, 2, 3, 4, 7, 8, 12, 13, 9, 10, 11, 14),] #separate into main effects then interaction effects in same order
-rownames(time.fit) <- c("Intercept", "Smoothed", "t", "abs(r)", "sign(r)", "abs(r)*sign(r)", "detected", "Plot", "Plot*Smoothed", "Plot*t", "Plot*abs(r)", "Plot*sign(r)", "Plot*abs(r)*sign(r)", "Plot*detected")
-time.fit$Effect <- NULL
-colnames(time.fit) <- c("Estimate", "standard error", "df", "t-value", "p-value")
-kable(time.fit[1:14,], format="latex", digits=2)
-#kable(time.fit[8:14,], format="latex", caption="Interaction Effects", digits=2)
-@
-\end{table}
 
 \iffalse
 This unrestricted model used in to test the symmetry restriction for the scatter plot design was written earlier as:
@@ -792,6 +737,19 @@ Time_{ijklmt} &=& \beta_{0} + \beta_{1} x_{1,i}  + \beta_{2} x_{2,j}  + \beta_{3
 
 The structure of the model is similar to that in Equation~\ref{modelpower} except the link function is removed and a new variable, $x_{6,m}$ is introduced, with $m = \{0,1\}$ indicating if the subject detected the true plot.
 
+\begin{table}[htp]
+\caption{Linear mixed model fit for time taken to make a selection, default plot style is overlaid lines. Fitted with the MIXED procedure in SAS.}
+\label{tab2}
+\centering
+<<timefit, dependson='setup', results='asis', echo=FALSE, message=FALSE, error=FALSE, error=FALSE, message=FALSE, warning=FALSE>>=
+time.fit <- time.fit[c(1, 5, 6, 2, 3, 4, 7, 8, 12, 13, 9, 10, 11, 14),] #separate into main effects then interaction effects in same order
+rownames(time.fit) <- c("Intercept", "Smoothed", "t", "abs(r)", "sign(r)", "abs(r)*sign(r)", "detected", "design", "design*Smoothed", "design*t", "design*abs(r)", "design*sign(r)", "design*abs(r)*sign(r)", "design*detected")
+time.fit$Effect <- NULL
+colnames(time.fit) <- c("Estimate", "standard error", "df", "t-value", "p-value")
+kable(time.fit[1:14,], format="latex", digits=2)
+@
+\end{table}
+
 Table~\ref{tab2} shows a similar story for time as Table~\ref{tab1} did for power, that the overlaid lines have better performance close to zero correlation, but the scatter plot is much faster at high correlations. Postivie correlation reduces time for both plot designs, but only the scatter plot sees improvements in negative correlation. Detecing the true plot was also faster than a null. Neither smoothness nor sample size has an impact on the time for either plot design, despite having statistically significant impacts on power. 
 %An overlaid line graph having positive correlation increases the time required, eliminating the benefits from the almost significant plot design term. This result seems counter-intuitive as the weak performance of the overlaid lines in negative correlation implies that negative would require more time than positive, but the interactions between plot design, correlation and sign result in there being almost no decrease in time for strongly negatively correlated line plots.
 
@@ -809,14 +767,14 @@ If a data analyst is required to use overlaid line graphs in their work, substan
 \begin{table}[htbp]
 \label{tab3}
 \centering
-<<answertables, dependson='setup', echo=FALSE, results='hide', message=FALSE, error=FALSE, warning=FALSE>>=
-turk.tbl <- select(Turk, test_param, smoothed, r, n, correct, attempt)
-turk.tbl$result <- paste(round(turk.tbl$correct, 0), turk.tbl$attempt, sep="/")
+<<answertables, dependson='setup', echo=FALSE, results='asis', message=FALSE, error=FALSE, warning=FALSE>>=
+turk.tbl <- select(bylineup, design, smoothed, r, n, correct, evals)
+turk.tbl$result <- paste(round(turk.tbl$correct, 0), turk.tbl$evals, sep="/")
 turk.tbl <- turk.tbl[order(turk.tbl$r, turk.tbl$n),]
-scatter.uns <- data.frame(c(12, "", "", 24, "", "", 48, "", "", 96, "", ""), matrix(subset(turk.tbl, smoothed==0 & test_param=="scatter")$result, ncol=8))
-scatter.sm <- data.frame(c(12, "", "", 24, "", "", 48, "", "", 96, "", ""), matrix(subset(turk.tbl, smoothed==1 & test_param=="scatter")$result, ncol=8))
-line.uns <- data.frame(c(12, "", "", 24, "", "", 48, "", "", 96, "", ""), matrix(subset(turk.tbl, smoothed==0 & test_param=="line")$result, ncol=8))
-line.sm <- data.frame(c(12, "", "", 24, "", "", 48, "", "", 96, "", ""), matrix(subset(turk.tbl, smoothed==1 & test_param=="line")$result, ncol=8))
+scatter.uns <- data.frame(c(12, "", "", 24, "", "", 48, "", "", 96, "", ""), matrix(subset(turk.tbl, smoothed==0 & design=="Scatterplot")$result, ncol=8))
+scatter.sm <- data.frame(c(12, "", "", 24, "", "", 48, "", "", 96, "", ""), matrix(subset(turk.tbl, smoothed==1 & design=="Scatterplot")$result, ncol=8))
+line.uns <- data.frame(c(12, "", "", 24, "", "", 48, "", "", 96, "", ""), matrix(subset(turk.tbl, smoothed==0 & design=="Overlaid Lines")$result, ncol=8))
+line.sm <- data.frame(c(12, "", "", 24, "", "", 48, "", "", 96, "", ""), matrix(subset(turk.tbl, smoothed==1 & design=="Overlaid Lines")$result, ncol=8))
 colnames(scatter.uns) <- c("", "-0.9", "-0.7", "-0.5", "-0.3", "0.3", "0.5", "0.7", "0.9")
 colnames(scatter.sm) <- c("","-0.9", "-0.7", "-0.5", "-0.3", "0.3", "0.5", "0.7", "0.9")
 colnames(line.uns) <- c("","-0.9", "-0.7", "-0.5", "-0.3", "0.3", "0.5", "0.7", "0.9")
@@ -828,18 +786,17 @@ kable(line.sm, format="latex", caption="Smoothed overlaid line results")
 @
 \end{table}
 
-Table~\ref{tab3} contains the true plot detections / attempts for each lineup in the data collection. True plot correlation is on the x axis and t is on the y axis. 
+Table~\ref{tab3} contains the true plot detections / attempts for each lineup in the data collection. Results ignore multiple selection weighting. True plot correlation is on the x axis and t is on the y axis. 
 
 \begin{figure}[htbp]
-\label{map}
 \centering
-<<map, , dependson='setup', echo=FALSE, results='hide', message=FALSE, error=FALSE, warning=FALSE>>=
+<<map, dependson='setup', echo=FALSE, results='hide', message=FALSE, error=FALSE, warning=FALSE>>=
 location <- read.csv("location.csv")
 map.dat <- map_data("world")
-ggplot() + geom_polygon(aes(long,lat, group=group), fill="grey65", data=map.dat) + 
-  geom_point(data=location, aes(x=lon, y=lat, colour= "blue")) + scale_colour_manual(values=c("#FF5500", "#00FFFF")) + 
-  theme_bw() + theme(aspect.ratio=0.67, axis.text=element_blank(), axis.title=element_blank(), legend.position="none")
+ggplot() + geom_polygon(aes(long,lat, group=group), fill="grey65", data=map.dat) + theme_bw() +
+  geom_point(data=location, aes(x=lon, y=lat, colour= "blue")) +scale_colour_manual(values=c("#FF5500", "#00FFFF")) + theme(axis.text=element_blank(), axis.title=element_blank(), legend.position="none")
 @
+\label{map}
 \end{figure}
 
 Figure~\ref{map} shows the location of the recruited subjects. The majority reside in the United States but some are spread around other countries in Europe and Asia.
